ECCI-uat-fixes: Removes padding from disclosure nav menu to ensure correct alignment

--- a/ecc_theme_intranet/css/disclosure-nav.css
+++ b/ecc_theme_intranet/css/disclosure-nav.css
@@ -176,7 +176,7 @@
   }
 
   .disclosure-nav__menu {
-    padding: 0 var(--spacing);
+    padding: 0;
   }
 
   .disclosure-nav__menu-item {
